<resources>
    <!-- Home Screen -->
    <string name="app_name">TicTacToe</string>
    <string name="home_title">Tic Tac Toe</string>
    <string name="btn_play">Play</string>

    <!-- Player Set-Up-->
    <string name="player_one_hint">Name</string>
    <string name="player_two_hint">Name</string>
    <string name="player_one_label">Player One</string>
    <string name="player_two_label">Player Two</string>
    <string name="btn_submit">Submit</string>
    <string name="player_setup_description">Enter your names below!</string>

    <!--Game Display-->
    <string name="btn_play_again">Play Again</string>
    <string name="btn_home">Home</string>

</resources>