<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerSetup"
    android:background="@color/pastel_rose">

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/player_setup_description"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPlayerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/player_one_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <EditText
        android:id="@+id/etPlayerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/player_two_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPlayerOne" />

    <TextView
        android:id="@+id/tvPlayerOneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_one_label"
        android:textColor="@color/pink"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etPlayerOne"
        app:layout_constraintStart_toStartOf="@+id/etPlayerOne" />

    <TextView
        android:id="@+id/tvPlayerTwoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_two_label"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etPlayerTwo"
        app:layout_constraintStart_toStartOf="@+id/etPlayerTwo" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_purple"
        android:onClick="onSubmitButtonClick"
        android:text="@string/btn_submit"
        android:textColor="@color/pastel_rose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPlayerTwo" />
</androidx.constraintlayout.widget.ConstraintLayout>